Test new ghareports listener for robotframework results in github actions Issue #332

--- a/.github/workflows/Regression_Tests_Agent.yaml
+++ b/.github/workflows/Regression_Tests_Agent.yaml
@@ -67,7 +67,8 @@ jobs:
 
       - name: Robot Framework
         run: >
-          robot --include ${{ env.tag }}
+          robot --listener GHAReports
+          --include ${{ env.tag }}
           --outputdir Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}
           Tests/Regression/Agent
 
