--- a/.github/workflows/Regression_Tests_Agent.yaml
+++ b/.github/workflows/Regression_Tests_Agent.yaml
@@ -72,6 +72,13 @@ jobs:
           --outputdir Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}
           Tests/Regression/Agent
 
+      - name: Upload XML artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Agent-XMLdata-${{ matrix.platform }}-${{ matrix.python }}
+          path: Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}/output.xml
+          retention-days: 1
+
       - name: Archive Agent Logs
         if: ${{ success() }}
         uses: actions/upload-artifact@v4
@@ -87,3 +94,61 @@ jobs:
           name: Agent-${{ matrix.platform }}-${{ matrix.python }}
           path: Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}
           retention-days: 90
+
+  Collect-xml-artifacts:
+    runs-on: ubuntu-latest
+    needs: Agent
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, windows-latest, macos-latest]
+        python: ['3.9', '3.10', '3.11', '3.12', '3.13']
+    steps:
+      - name: Build artifact name
+        id: vars
+        run: echo "name=Agent-XMLdata-${{ matrix.platform }}-${{ matrix.python }}" >> $GITHUB_OUTPUT
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ steps.vars.outputs.name }}
+          path: collected/${{ matrix.platform }}/python${{ matrix.python }}
+
+      - name: Upload merged XMLdata
+        uses: actions/upload-artifact@v4
+        with:
+          name: Agent-XMLdata-ALL
+          path: collected/**/output.xml
+
+  Generate-report:
+    needs: Collect-xml-artifacts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+      - name: Pip Update
+        run: python -m pip install --upgrade pip
+      - name: Install Dashboard
+        run: pip install robotframework-dashboard
+
+      - name: Download all XMLs
+        uses: actions/download-artifact@v4
+        with:
+          name: Agent-XMLdata-ALL
+          path: xml-data
+
+      - name: Build Dashboard
+        run: >
+          robotdashboard
+          -f xml-data
+          -n dashboard/Agent/index.html
+
+      - name: Deploy subpage to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dashboard/Agent
+          destination_dir: Agent
+          keep_files: true
