--- a/.github/workflows/Main.yaml
+++ b/.github/workflows/Main.yaml
@@ -42,6 +42,6 @@ jobs:
     - Package_For_PIP
     # - Regression_Tests
     - Regression_Tests_Agent
-    - Regression_Tests_Manager
-    - Regression_Tests_Reporter
+    # - Regression_Tests_Manager
+    # - Regression_Tests_Reporter
     uses: ./.github/workflows/Publish.yaml
