--- a/.github/workflows/Regression_Tests_Agent.yaml
+++ b/.github/workflows/Regression_Tests_Agent.yaml
@@ -73,9 +73,9 @@ jobs:
           Tests/Regression/Agent
 
       - name: Upload XML artifact
-        uses: actions/upload-artifact@v3 # In v3, Artifacts are mutable
+        uses: actions/upload-artifact@v4
         with:
-          name: agent-XMLdata
+          name: agent-XMLdata-${{ matrix.platform }}-${{ matrix.python }}
           path: Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}/output.xml
           retention-days: 3
 
@@ -112,9 +112,19 @@ jobs:
   #         name: agent-XMLdata-ALL
   #         path: collected/**/output.xml
 
-  Generate-report:
-    needs: Agent
+  Merge-XML-data:
     runs-on: ubuntu-latest
+    needs: Agent
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: agent-XMLdata-ALL
+          pattern: agent-XMLdata-*
+
+  Generate-report:
+    runs-on: ubuntu-latest
+    needs: Merge-XML-data
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -123,20 +133,20 @@ jobs:
         uses: actions/setup-python@v5
       - name: Pip Update
         run: python -m pip install --upgrade pip
-      - name: Install Dashboard
+      - name: Install RF-Dashboard
         run: pip install robotframework-dashboard
 
-      - name: Download XML data artifact
-        uses: actions/download-artifact@v3
+      - name: Download all XML data artifact
+        uses: actions/download-artifact@v4
         with:
-          name: agent-XMLdata
-          path: collected
-      - run: ls -R collected
+          name: agent-XMLdata-ALL
+          path: xml_data
+      - run: ls -R xml_data
 
       - name: Build Dashboard
         run: >
           robotdashboard
-          -f collected
+          -f xml_data
           -n dashboard/Agent/index.html
 
       - name: Deploy subpage to GitHub Pages
