--- a/.github/workflows/Main.yaml
+++ b/.github/workflows/Main.yaml
@@ -35,6 +35,13 @@ jobs:
   #     - Package_For_PIP
   #   uses: ./.github/workflows/Regression_Tests_Reporter.yaml
 
+  Website:
+    needs:
+      - Regression_Tests_Agent
+      # - Regression_Tests_Manager
+      # - Regression_Tests_Reporter
+    uses: ./.github/workflows/Website.yaml
+
   Publish_Package:
     if: github.repository_owner == 'damies13' && needs.Package_For_PIP.outputs.isrelease == 1
     # if: github.repository_owner == 'damies13'
