--- a/.github/workflows/Website.yaml
+++ b/.github/workflows/Website.yaml
@@ -4,31 +4,26 @@ name: Deploy Website
 on: workflow_call
 
 jobs:
-  Build-main-website:
+  Build-website:
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Create main Website
-      run: |
-        mkdir website
-        echo '<!DOCTYPE html><html><body>' > website/index.html
-        echo '<h1>Test Cases RF-Dashboard reports:</h1>' >> website/index.html
-        echo '<ul>' >> website/index.html
-        echo '<li><a href="dashboard/Agent/"> Agent </a></li>' >> website/index.html
-        echo '<li><a href="dashboard/Manager/"> Manager </a></li>' >> website/index.html
-        echo '<li><a href="dashboard/Reporter/"> Reporter </a></li>' >> website/index.html
-        echo '</ul>' >> website/index.html
-        echo '</body></html>' >> website/index.html
-
-  Generate-reports:
-    runs-on: ubuntu-latest
-    needs: Build-main-website
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Create main Website
+        run: |
+          mkdir -p website
+          {
+          echo '<!DOCTYPE html><html><body>'
+          echo '<h1>Test Cases RF-Dashboard reports:</h1>'
+          echo '<ul>'
+          echo '<li><a href="dashboard/Agent/"> Agent </a></li>'
+          echo '<li><a href="dashboard/Manager/"> Manager </a></li>'
+          echo '<li><a href="dashboard/Reporter/"> Reporter </a></li>'
+          echo '</ul>'
+          echo '</body></html>'
+          } > website/index.html
 
       - name: Setup Python
         uses: actions/setup-python@v5
