--- a/.github/workflows/Regression_Tests_Reporter.yaml
+++ b/.github/workflows/Regression_Tests_Reporter.yaml
@@ -143,7 +143,7 @@ jobs:
       - name: Robot Framework
         id: robottest
         run: >
-          robot --listener GHAReports
+          robot
           --include ${{ env.tag }}
           --outputdir Tests/Regression/Reporter/Logs/${{ matrix.platform }}_${{ matrix.python }}
           Tests/Regression/Reporter
@@ -178,3 +178,25 @@ jobs:
           name: Reporter-${{ matrix.platform }}-${{ matrix.python }}
           path: Tests/Regression/Reporter/Logs/${{ matrix.platform }}_${{ matrix.python }}
           retention-days: 90
+
+      - name: Change output.xml file name
+        run: >
+          mv Tests/Regression/Reporter/Logs/${{ matrix.platform }}_${{ matrix.python }}/output.xml
+          Tests/Regression/Reporter/Logs/${{ matrix.platform }}_${{ matrix.python }}/output_${{ matrix.platform }}_${{ matrix.python }}.xml
+
+      - name: Upload XML artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: reporter-XMLdata-${{ matrix.platform }}-${{ matrix.python }}
+          path: Tests/Regression/Reporter/Logs/${{ matrix.platform }}_${{ matrix.python }}/output_${{ matrix.platform }}_${{ matrix.python }}.xml
+          retention-days: 3
+
+  Merge-XML-data:
+    runs-on: ubuntu-latest
+    needs: Reporter
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: reporter-XMLdata-ALL
+          pattern: reporter-XMLdata-*
