--- a/.github/workflows/Regression_Tests_Agent.yaml
+++ b/.github/workflows/Regression_Tests_Agent.yaml
@@ -103,6 +103,7 @@ jobs:
   Merge-XML-data:
     runs-on: ubuntu-latest
     needs: Agent
+    if: ${{ always() }}
     steps:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
