--- a/.github/workflows/Regression_Tests_Manager.yaml
+++ b/.github/workflows/Regression_Tests_Manager.yaml
@@ -155,19 +155,20 @@ jobs:
 
       - name: Change output.xml file name
         run: >
-          mv Tests/Regression/Manager/Logs/${{ matrix.platform }}_${{ matrix.python }}/output.xml
-          Tests/Regression/Manager/Logs/${{ matrix.platform }}_${{ matrix.python }}/output_${{ matrix.platform }}_${{ matrix.python }}.xml
+          mv Tests/Regression/Manager/Logs/${{ matrix.platform }}_${{ matrix.python }}_${{ matrix.tag }}/output.xml
+          Tests/Regression/Manager/Logs/${{ matrix.platform }}_${{ matrix.python }}_${{ matrix.tag }}/output_${{ matrix.platform }}_${{ matrix.python }}_${{ matrix.tag }}.xml
 
       - name: Upload XML artifact
         uses: actions/upload-artifact@v4
         with:
           name: manager-XMLdata-${{ matrix.platform }}-${{ matrix.python }}
-          path: Tests/Regression/Manager/Logs/${{ matrix.platform }}_${{ matrix.python }}/output_${{ matrix.platform }}_${{ matrix.python }}.xml
+          path: Tests/Regression/Manager/Logs/${{ matrix.platform }}_${{ matrix.python }}_${{ matrix.tag }}/output_${{ matrix.platform }}_${{ matrix.python }}_${{ matrix.tag }}.xml
           retention-days: 3
 
   Merge-XML-data:
     runs-on: ubuntu-latest
     needs: Manager
+    if: ${{ always() }}
     steps:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
