--- a/.github/workflows/Regression_Tests_Reporter.yaml
+++ b/.github/workflows/Regression_Tests_Reporter.yaml
@@ -194,6 +194,7 @@ jobs:
   Merge-XML-data:
     runs-on: ubuntu-latest
     needs: Reporter
+    if: ${{ always() }}
     steps:
       - name: Merge Artifacts
         uses: actions/upload-artifact/merge@v4
