--- a/.github/workflows/Main.yaml
+++ b/.github/workflows/Main.yaml
@@ -36,6 +36,7 @@ jobs:
     uses: ./.github/workflows/Regression_Tests_Reporter.yaml
 
   Website:
+    if: ${{ always() }}
     needs:
       - Regression_Tests_Agent
       - Regression_Tests_Manager
