--- a/.github/workflows/Regression_Tests_Agent.yaml
+++ b/.github/workflows/Regression_Tests_Agent.yaml
@@ -89,11 +89,13 @@ jobs:
           retention-days: 90
 
       - name: Change output.xml file name
+        if: ${{ always() }}
         run: >
           mv Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}/output.xml
           Tests/Regression/Agent/Logs/${{ matrix.platform }}_${{ matrix.python }}/output_${{ matrix.platform }}_${{ matrix.python }}.xml
 
       - name: Upload XML artifact
+        if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: agent-XMLdata-${{ matrix.platform }}-${{ matrix.python }}
